# vllm-qdq-plugin

./: .gitignore  README.md  pyproject.toml  ring-attention.excalidraw
docs/plan/: review_force_mxfp4_qdq_plan_20260507_064813.md
src/vllm_qdq_plugin/: __init__.py  envs.py  patch.py  trace.py
src/vllm_qdq_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/vllm_qdq_plugin/qdq/: __init__.py  mxfp4.py  mxfp8.py
src/vllm_qdq_plugin/sage3_attn/: __init__.py  backend.py  impl.py  impl_cute.py
src/vllm_qdq_plugin/sage3_attn/sage3/: __init__.py  acc_dtype_findings.md  api.py  attention_kernel.py  layer_adaptive.py  p_quant_kernels.py  p_quant_registry.py  quant_config.py  quant_primitives.py  quantize.py  transforms.py
tests/: test_envs.py  test_patch.py
